# gamepads_android

./: README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  main.cpp
android/src/main/kotlin/com/example/gamepads_android/: ConnectionListener.kt  DeviceListener.kt  EventListener.kt  GamepadsAndroidPlugin.kt  GamepadsCompatibleActivity.kt  GamepadsListener.kt
android/src/main/kotlin/dev/markvideon/gamepads_android/: EventListener.kt
android/src/test/kotlin/com/example/gamepads_android/: GamepadsAndroidPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/gamepads_android_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: gamepads_android.dart  gamepads_android_method_channel.dart  gamepads_android_platform_interface.dart
test/: gamepads_android_method_channel_test.dart  gamepads_android_test.dart
